tests/NormalTests/paczka1/fuzzy1/60667518.err
Error in line 7: nLM21565Whz S234 2,9
Error in line 13: cfRZgVSf S234 910,6
Error in line 21: FexJP7n A286 16,0
Error in line 23: JroH1HSIeCh S234 65,0
Error in line 14: nLM21565Whz S853 5,6
Error in line 29: JroH1HSIeCh A286 72,9
Error in line 27: FexJP7n S495 42,5
Error in line 25: S853 S234 74,2
